--- a/frontend/src/components/layouts/PublicOrganizer/PublicOrganizer.module.scss
+++ b/frontend/src/components/layouts/PublicOrganizer/PublicOrganizer.module.scss
@@ -1,3 +1,5 @@
+@use "../../../styles/mixins.scss";
+
 .container {
   min-height: 100vh;
   background: var(--organizer-bg-color, #f5f5f5);
@@ -48,7 +50,7 @@
   }
 
   @media (max-width: 768px) {
-    height: 250px;
+    max-height: 180px;
   }
 }
 
@@ -59,9 +61,9 @@
   align-items: flex-start;
 
   @media (max-width: 768px) {
-    padding: 1.5rem;
+    padding: 1.2rem;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: .5rem;
   }
 }
 
@@ -91,9 +93,12 @@
     font-weight: 700;
   }
 
-  @media (max-width: 768px) {
-    width: 80px;
-    height: 80px;
+  @include mixins.respond-below('sm') {
+    width: 75px;
+    height: 75px;
+    margin-top: -50px;
+    z-index: 1;
+    border: 4px solid var(--content-bg-color);
   }
 }
 
@@ -106,7 +111,7 @@
     margin: 0 0 0.5rem 0;
     color: var(--primary-text-color);
 
-    @media (max-width: 768px) {
+    @include mixins.respond-below('sm') {
       font-size: 1.75rem;
     }
   }
@@ -185,7 +190,7 @@
     color: var(--content-bg-color);
   }
 
-  @media (max-width: 479px) {
+  @include mixins.respond-below('sm') {
     width: 100%;
   }
 }
@@ -227,7 +232,7 @@
     color: var(--primary-text-color);
   }
 
-  @media (max-width: 640px) {
+  @include mixins.respond-below('sm') {
     h2 {
       font-size: 1.5rem;
     }
