--- a/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
@@ -9,6 +9,42 @@
   align-items: center;
   justify-content: space-between;
 
+  .organizer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 40px;
+
+    .organizerLogo {
+      width: 40px;
+      height: 40px;
+      border-radius: 10px;
+
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
+    }
+
+    .organizerName {
+      margin: 0 0 0 10px;
+      color: var(--homepage-secondary-color, #000);
+      font-weight: 600;
+      text-decoration: none;
+      font-size: 1em;
+
+      a {
+        color: inherit;
+        font-weight: 600;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
   .shareButtons button {
     color: var(--homepage-secondary-color, var(--tk-color-black));
   }
@@ -34,6 +70,18 @@
     display: flex;
     margin-bottom: 10px;
     flex-direction: column;
+
+    &:last-child {
+      margin-bottom: 0;
+
+      :first-child {
+        margin-bottom: 0;
+
+        .detail {
+          margin-bottom: 0;
+        }
+      }
+    }
 
     .details {
       display: flex;
