--- a/frontend/src/components/layouts/OrganizerLayout/OrganizerLayout.module.scss
+++ b/frontend/src/components/layouts/OrganizerLayout/OrganizerLayout.module.scss
@@ -64,5 +64,40 @@
   }
 }
 
+.statusToggleContainer {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-left: 0px;
+  margin-right: auto;
 
+  @include mixins.respond-below(md) {
+    margin-left: 16px;
+  }
+
+  .statusAction {
+    margin-left: 4px;
+    font-weight: 400;
+    font-size: 0.85em;
+    opacity: 0.9;
+
+    @include mixins.respond-below(md) {
+      display: none;
+    }
+  }
+}
+
+.createEventBreadcrumb {
+  cursor: pointer;
+  opacity: 0.65;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  transition: opacity 0.2s ease;
+  font-weight: 500;
+
+  &:hover {
+    opacity: 0.85;
+  }
+}
 
