--- a/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
+++ b/frontend/src/components/layouts/EventHomepage/EventInformation/EventInformation.module.scss
@@ -18,18 +18,19 @@
     .organizerLogo {
       width: 30px;
       height: 30px;
-      border-radius: 10px;
       overflow: hidden;
+      margin-right: 8px;
 
       img {
         width: 100%;
         height: auto;
         display: block;
+        object-fit: contain;
       }
     }
 
     .organizerName {
-      margin: 0 0 0 10px;
+      margin: 0;
       color: var(--homepage-secondary-color, #000);
       font-weight: 600;
       text-decoration: none;
@@ -116,6 +117,7 @@
 
   .viewOnGoogleMaps {
     padding: 0;
+    color: var(--homepage-secondary-color);
 
     svg {
       width: 15px !important;
