--- a/frontend/src/components/layouts/OrganizerHomepage/OrganizerHomepage.module.scss
+++ b/frontend/src/components/layouts/OrganizerHomepage/OrganizerHomepage.module.scss
@@ -441,7 +441,7 @@
 .noEvents {
   text-align: center;
   padding: 3rem 1rem;
-  color: var(--secondary-text-color);
+  color: var(--secondary-color);
   font-size: 1rem;
   background: var(--content-bg-color);
   border-radius: 16px;
