--- a/frontend/src/components/layouts/OrganizerLayout/OrganizerLayout.module.scss
+++ b/frontend/src/components/layouts/OrganizerLayout/OrganizerLayout.module.scss
@@ -101,3 +101,18 @@
   }
 }
 
+.shareButtonTextDesktop {
+    display: inline;
+
+    @include mixins.respond-below(md) {
+        display: none;
+    }
+}
+
+.shareButtonTextMobile {
+    display: none;
+
+    @include mixins.respond-below(md) {
+        display: inline;
+    }
+}
